syntax = "proto3";

package post;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/imhasandl/post-service/protos";

service PostService {
   rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {}
   rpc GetPostByID (GetPostByIDRequest) returns (GetPostByIDResponse) {}
   rpc GetAllPosts (GetAllPostsRequest) returns (GetAllPostsResponse) {}
   rpc ReportPost (ReportPostRequest) returns (ReportPostResponse) {}
}

message CreatePostRequest {
   string body = 1;
}

message CreatePostResponse {
   Post post = 1;
}

message GetPostByIDRequest {
   string id = 1;
}

message GetPostByIDResponse {
   Post post = 1;
}

message GetAllPostsRequest {}

message GetAllPostsResponse {
  repeated Post posts = 1; 
}

message ReportPostRequest {
   string id = 1;
   string reported_by = 2;
   string reason = 3;
}

message ReportPostResponse {
   ReportPost report_post = 1;
}

message Post {
   string id = 1;
   google.protobuf.Timestamp created_at = 2;
   google.protobuf.Timestamp updated_at = 3;
   string posted_by = 4;
   string body = 5;
   int32 views = 6;
   int32 likes = 7;
}

message ReportPost {
   string id = 1;
   google.protobuf.Timestamp reported_at = 2;
   string reported_by = 3;
   string reason = 4;
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative post.proto
